<resources>
    <!-- General Strings -->
    <string name="app_name">Tinappay</string>
    <string name="cancel">Cancel</string>

    <!-- Login/Register -->
    <string name="tv_login">LOGIN</string>
    <string name="tv_login_register">Create an account</string>
    <string name="tv_register_login">Already have an account? Sign in</string>
    <string name="tv_register">REGISTER</string>
    <string name="change_password">CHANGE PASSWORD</string>

    <!-- Account -->
    <string name="tv_a_acc_title">Account Settings</string>
    <string name="tv_a_email_title">Currently Signed As:</string>
    <string name="log_out">LOG OUT</string>
    <string name="confirm_change">Confirm Change</string>

    <!-- Titles -->
    <string name="home_products">Products</string>
    <string name="home_ingredients">Ingredients</string>
    <string name="home_checklist">Checklist</string>
    <string name="home_account_settings">Account</string>

    <string name="add">Add</string>
    <string name="confirm">CONFIRM</string>
    <string name="apply">Apply</string>

    <!-- Loading -->
    <string name="connecting">Connecting to database…</string>
    <string name="fetch_items">Fetching items…</string>
    <string name="query_product">Fetching product details…</string>
    <string name="fetch_prices">Fetching ingredient prices…</string>
    <string name="empty">Uh oh! It looks like nothing\'s here yet…</string>

    <!-- Labels and Fields -->
    <string name="add_product">Add Product</string>
    <string name="placeholder">[ - ]</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_ingredients">Select Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="set_ingredients">Set Ingredients</string>
    <string name="filter_clear">Clear</string>
    <string name="filter_apply">Filter</string>
    <string name="upload_image">Upload Image</string>

    <!-- Product -->
    <string name="p_pricing">Ingredient Pricing</string>
    <string name="p_pricing_name">Ingredient</string>
    <string name="p_pricing_quantity">Quantity</string>
    <string name="p_pricing_price">Total Price</string>


    <!-- Adding/Editing -->
    <string name="pm_add">Add Product</string>
    <string name="pm_edit">Edit Product</string>
    <string name="pm_add2">Add</string>
    <string name="pm_apply">Apply</string>
    <string name="pm_name">Product Name</string>
    <string name="pm_type">Type</string>
    <string name="pm_price">Price</string>
    <string name="pm_description">Description</string>
    <string name="delete_item">Delete this item?</string>

    <!-- Ingredient Add/Edit -->
    <string name="im_name">Ingredient Name</string>
    <string name="im_type">Type</string>
    <string name="im_price">Price</string>
    <string name="im_location">Location/Store</string>

    <string name="im_add">Add Ingredient</string>
    <string name="im_edit">Edit Ingredient</string>

    <string name="default_quantity">0</string>
    <string name="min_quantity">1</string>
    <string name="max_quantity">99</string>
</resources>